--- a/views/includes/entete.ejs
+++ b/views/includes/entete.ejs
@@ -413,6 +413,14 @@
                       <li class=""><a href="/neocles-reporting-equipe"> Consultation groupée </a></li>
                     </ul>
                   </li>
+                  	<!-- Ajout menu fiche de suivi -->
+                  <li class="dropdown messages-dropdown dropdown-masque" id="neocles">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-dashboard fa-lg" style="color:#fff16f"></i>Fiche de suivi</a>
+                    <ul class="dropdown-menu notifications">
+                      <li class=""><a href="/fiche_suivi_en_detail">Fiche de suivi en détail</a></li>
+                      <li class=""><a href="/fiche_suivi_de_conformite">Fiche de suivi de conformité</a></li>
+                    </ul>
+                  </li>
                    <%
                       }
                    %>
