--- a/views/includes/entete.ejs
+++ b/views/includes/entete.ejs
@@ -415,10 +415,11 @@
                   </li>
                   	<!-- Ajout menu fiche de suivi -->
                   <li class="dropdown messages-dropdown dropdown-masque" id="neocles">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-dashboard fa-lg" style="color:#fff16f"></i>Fiche de suivi</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-dashboard fa-lg" style="color:#2EF312"></i> Fiche de suivi <b class="caret"></b></a>
                     <ul class="dropdown-menu notifications">
                       <li class=""><a href="/fiche_suivi_en_detail">Fiche de suivi en détail</a></li>
                       <li class=""><a href="/fiche_suivi_de_conformite">Fiche de suivi de conformité</a></li>
+                      <li class=""><a href="/coaching">Séances de coaching QUALITE/TECHNICITE </a></li>
                     </ul>
                   </li>
                    <%
