--- a/views/pages/neocles/fiche_de_suivi/fichedesuivideconformite.ejs
+++ b/views/pages/neocles/fiche_de_suivi/fichedesuivideconformite.ejs
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="/css/Style_v3.css">
     <link rel="stylesheet" href="/morris/morris.css">
     <link rel="stylesheet" href="/css/bootstrap-material-datetimepicker.css">
+    <style>
+      #board tr th{
+        color: green;
+
+      }
+
+    </style>
     <!--STYLES END-->
 </head>
 <body>
@@ -26,8 +33,85 @@
 
 <% }%>
 
-<h1>Fiche de suivi de conformité</h1>
+<% if(update == true){
+  %>
+  <script>
+    alert("Fiche de conformité mise à jour avec succès")
+  </script>
+  <%
+}
+%>
+<h1 class="tit">Fiche de suivi de conformité</h1>
 
+<div id="page-wrapper">
+    <div class="row">
+      <div class="col-md-12">
+        <div class=" row ">
+            <div  class="">
+              <div class="panel panel-primary">
+                <div class="panel-heading">
+                  <!-- <h3 class="panel-title"> <i class="fa fa-bar-chart-o"></i> </h3> -->
+                  <div class="row">
+                    <div class="form-group">
+                        <!-- <div class="col-xs-2 col-md-2 col-lg-2">
+                          <select class="form-control" tabindex="-1" id="equipeDashAdmin" placeholder = "Equipe" name="equipe" >
+                            <option value="1">EQUIPE</option> 
+                          </select>                          
+                        </div> -->
+                        <div class="col-xs-2 col-md-2 col-lg-2">
+                          <!-- <input class="form-control" tabindex="-1" id="datetim" /> -->
+                          <input type="month" id="mois" class="form-control" name="mois"  min="0000-01" max="9999-01" placeholder="mois année" required/>
+                        </div>
+                        <div class="col-xs-2 col-md-2 col-lg-2">
+                          <% 
+                          if(manager == true){
+                          %>
+                            <!-- <input type="text" class="form-control" tabindex="-1" id="id_pers" placeholder="Matricule" required/> -->
+                          <select class="form-control" id="id_pers" placeholder = "Matricule" name="Matricule" >
+                            <option value=""></option>
+                            <% 
+                              for (var i = 0 ; i < id_appelation.rowCount ; i++){
+                            %>
+                            <option value="<%= id_appelation.rows[i].id_pers %>"><%= id_appelation.rows[i].appelation %> <%= id_appelation.rows[i].id_pers %></option>
+                            <% 
+                              }
+                            %>
+                          </select>
+                          <%
+                          }
+                          else{
+                          %>
+                            <input type="text" class="form-control" tabindex="-1" id="id_pers" placeholder="Matricule" value="<%= id %>" disabled/>
+                           
+                          <%
+                          }
+                          %>
+                          </div>
+                        <div class="col-xs-2 col-md-2 col-lg-2">
+
+                          <button type="submit" style="margin-top:-1px" class="btn btn-info" onclick="suivi_conformite();">Recherche</button>
+
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- <div class="clearfix"></div>
+                <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+                <span class="sr-only">Loading...</span>
+              </div> -->
+              <div id="div" class="col-md-12 col-sm-12 col-xs-12"></div>
+
+              <div id="tableau_conformite">
+                 
+              </div>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.7.3/dist/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@0.5.7/chartjs-plugin-annotation.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>     
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/jquery-1.10.2.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
@@ -37,5 +121,7 @@
     <script src="/js/jquery-ui.min.js"></script>
     <script src="/js/material-modal.min.js"></script>
     <script src="/js/pikaday.js"></script>
+    <script src="/js/neocles/js.js"></script>
+  
 </body>
 
