--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -102,7 +102,8 @@
 
     -->
 
-    <!--SCRIPTS-->
+    <!--SCRIPTS coucou-->
+   
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/jquery-1.10.2.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
